# vision_pipeline

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  _config.yml  compose.yaml  pyproject.toml  requirements.txt
configs/: default.yaml
docs/: architecture.md
scripts/: inference.py
src/vision_pipeline/api/: app.py  exceptions.py  handlers.py  responses.py  routes.py  schemas.py
src/vision_pipeline/config/: loader.py
src/vision_pipeline/pipelines/: inference.py
src/vision_pipeline/utils/: logging.py
