[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vision_pipeline"
version = "0.1.0"
description = "Modular computer vision inference pipeline."
readme = "README.md"
requires-python = ">=3.13"

authors = [
    { name = "Eduardo de Jesús Dávila Meza" }
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]